# DM_Project_Relational_vs_Graph_DB

./: .gitignore  README.md  analysis.ipynb  docker-compose.yml  main.py  pyproject.toml
benchmark/: queries.py  runner.py
benchmark/results/: plans.csv  timing.csv
data/: generate_clean_data.py  generate_scales.py
data/neo4jdb/: load.py  load_scale.py
data/postgresdb/: load.py  load_scale.py  utils.py
